# bkd

./: .gitignore  COPILOT_CONTEXT.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  TANTIVY_FORK_SETUP.md  WORKSPACE_SETUP.md  bkd-tantivy.code-workspace  diary.md  external.sh
src/: arena.rs  lib.rs  main.rs  print.rs  search.rs  spatial.rs  storage.rs  tantivy_linker.rs  tree.rs
src/attic/: 00_kd.rs  01_block_kd.rs  02_block_kd_print.rs
src/lib/: tantivy_linker.rs
